<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".login_register_cognito.LoginActivity"
              >


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_background"
                android:scaleType="fitCenter"

                android:src="@drawable/ic_account_circle" />


        <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_person_outline"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="User Name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="21sp" />

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_lock_outline"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="21sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="right"
                android:text="Forgot password ?"
                android:textColor="@color/white" />

        <Button
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_background"
                android:text="Log in"
                android:textAllCaps="false"
                android:alpha="0.9"
                android:textColor="@color/white"
                android:textSize="21sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="REGISTRATI"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp" android:id="@+id/signup"/>
    </LinearLayout>

</RelativeLayout>
